_rendered/apps/cloudnative-pg-operator/apps-deployment-cloudnative-pg-cloudnative-pg-operator.yaml
# Source: cloudnative-pg-operator/charts/cloudnative-pg/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnative-pg-operator
  namespace: cloudnative-pg
  labels:
    helm.sh/chart: cloudnative-pg-0.29.0
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/instance: cloudnative-pg-operator
    app.kubernetes.io/version: "1.30.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: cloudnative-pg-operator
  template:
    metadata:
      annotations:
        checksum/rbac: 042b91261f9dd025d582b98855820dee11f3efa21f4f7a9e86ae7a3aed5f5dbf
        checksum/config: c9e84d67f2f949ad2bb0eb5dd8eec909f19eb31a000054c8027c1ef7b5a4b324
        checksum/monitoring-config: d10b4272f4f757dc3459a8c89821554a1ed1fafb059fb0ce78ec3bb504699713
      labels:
        app.kubernetes.io/name: cloudnative-pg
        app.kubernetes.io/instance: cloudnative-pg-operator
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --max-concurrent-reconciles=10
        - --config-map-name=cnpg-controller-manager-config
        - --webhook-port=9443
        command:
        - /manager
        image: "ghcr.io/cloudnative-pg/cloudnative-pg:1.30.0"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        resources:
          {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          periodSeconds: 5
        volumeMounts:
        - mountPath: /controller
          name: scratch-data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-certificates
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cloudnative-pg-operator
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: scratch-data
      - name: webhook-certificates
        secret:
          defaultMode: 420
          optional: true
          secretName: cnpg-webhook-cert
